[package]
name = "ascii_table"
version = "2.1.0"
authors = ["Gerrit Viljoen <red.striker@protonmail.com>"]
license = "GPL-3.0+"
edition = "2018"

description = "Print ASCII tables to the terminal"
repository = "https://gitlab.com/d5b4b2/ascii-table"
homepage = "https://gitlab.com/d5b4b2/ascii-table"
documentation = "https://docs.rs/ascii_table"
readme = "readme.md"
categories = ["command-line-interface"]
keywords = ["ascii", "table"]
